--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Jumbotron -->
 
     <div class="jumbotron">
-      <img src="img/gambar.jpg" alt="" />
+      <img src="img/foto.jpg" alt="" />
       <h3>Muhamad Tegar Setiawan</h3>
       <p>"Student Madrasah Aliyah"</p>
     </div>
@@ -88,7 +88,11 @@
           <b>EMAIL</b>
           <div class="img">
             <img src="img/Mail.jpg" width="25%" />
-            <a href=""><p>@mt.setiwan</p></a>
+            <a
+              href="https://mail.google.com/mail/u/0/#inbox?compose=GFrJzhXdXPLSXRLvVlPGzkGxLtZRvBXdZVJKPmFNmdgZVxHKzhCmdNfzTnpdjgsrHNfg"
+            >
+              <p>@mt.setiwan</p>
+            </a>
           </div>
         </div>
         <div class="medsos">
