--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <b>TWITTER</b>
           <div class="img">
             <img src="img/tw.png" width="25%" />
-            <a href=""><p>@mt.setiawan</p></a>
+            <a href="https://twitter.com/MTGAR13"><p>@mt.setiawan</p></a>
           </div>
         </div>
       </div>
